--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A node module for authentication and use with the BigCommerce API",
   "main": "./lib/bigcommerce",
   "scripts": {
-    "autotest": "node_modules/.bin/supervisor -q -n exit -x node_modules/.bin/_mocha --",
-    "exectests": "node_modules/.bin/nyc ./node_modules/.bin/_mocha",
-    "lint": "node_modules/.bin/eslint lib test",
-    "test": "npm run exectests && npm run lint"
+    "coverage": "jest --coverage",
+    "lint": "eslint . --ext .ts",
+    "test": "jest",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -28,18 +28,25 @@
   "bugs": "https://github.com/getconversio/node-bigcommerce/issues",
   "homepage": "https://github.com/getconversio/node-bigcommerce",
   "devDependencies": {
-    "agentkeepalive": "^3.1.0",
-    "chai": "^3.5.0",
-    "eslint": "^4.9.0",
-    "eslint-config-conversio": "^1.0.4",
-    "mocha": "^6.1.4",
-    "nock": "^10.0.1",
-    "nyc": "^14.1.1",
-    "sinon": "^1.17.3",
-    "supervisor": "^0.12.0"
+    "@tsconfig/node16": "^1.0.2",
+    "@types/debug": "^4.1.7",
+    "@types/is-ip": "^3.0.0",
+    "@types/jest": "^27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/sinon": "^10.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "agentkeepalive": "^4.2.1",
+    "eslint": "^8.13.0",
+    "jest": "^27.5.1",
+    "nock": "^13.2.4",
+    "sinon": "^13.0.2",
+    "supervisor": "^0.12.0",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "debug": "^3.1.0",
+    "debug": "^4.3.4",
     "is-ip": "^3.1.0",
     "jsonwebtoken": "^8.5.1"
   }
