--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "@tsconfig/node16/tsconfig.json",
 	"compilerOptions": {
-		"outDir": "lib",
+		"outDir": "dist",
 		"declaration": true,
 	},
 	"include": [
